[package]
name = "todo"
version = "0.1.0"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
description = "simple command-line todo list"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
regex = "1.5.4"
chrono = { version = "0.4", features = ["unstable-locales"] }
